--- a/public/css/registracia.css
+++ b/public/css/registracia.css
@@ -15,8 +15,8 @@ body {
 
 .container {
     display: flex;
-    justify-content: space-between;
-    width: 80%;
+    flex-direction: column;
+    width: 33%;
     max-width: 50rem; /* Maximálna šírka kontejnera */
     background: white;
     box-shadow: 0 0.125rem 0.625rem rgba(0, 0, 0, 0.1);
@@ -61,4 +61,9 @@ button {
 
 button:hover {
     background-color: #218838; /* Zmena farby tlačidla pri hover */
+}
+
+p{
+    display: block;
+    padding: 2rem;
 }
