--- a/public/css/main.css
+++ b/public/css/main.css
@@ -56,6 +56,25 @@ form button:hover {
     background: #e64a00;
 }
 
+.logout{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+}
+.logout-btn{
+    padding: 0.5rem 0.75rem;
+    font-size: 1.2rem;
+    background: #f38954;
+    color: whitesmoke;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+}
+.logout-btn:hover{
+    background: #e64a00;
+}
 
 /*------------------------------------------------------------------MAIN-------------------------------------------------------*/
 .main-header{
