--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,7 +40,7 @@ form {
 
 form input {
     border: none;
-    padding: 0.75rem;
+    padding: 0.5rem;
     outline: none;
 }
 
@@ -235,31 +235,80 @@ form button:hover {
 .serverInfo h1{
     text-align: center;
     padding: 2rem 0;
-    font-size: 2.5rem;
+    font-size: 3rem;
+}
+.serverInfo h2{
+    text-align: center;
+    padding: 1rem 0;
+    font-size: 2rem;
 }
 .serverFormular{
-    width: 50%;
+    width: 60%;
     margin: 0 auto;
     height: auto;
-    background-color: rgb(246, 213, 213);
-    padding: 2rem;
+    background-color: #f9d0ab;
+    padding: 1rem;
+    border-radius: 2rem;
 }
 
 .formularNaVytvorenie{
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     margin-top: 1.5rem;
 }
 
-.serverFormular label {
+.serverLabel{
     display: block;
     font-weight: bold;
-    padding: 0.5rem;
+    padding: 1rem 1rem 0.5rem 1rem;
+    font-size: 1.7rem;
 }
-.serverFormular input {
+.upravaLabel {
     display: block; 
     width: 100%; 
-    padding: 0.75rem; 
+    padding: 0.75rem 1rem; 
+    font-size: 1.2rem;
+}
+
+.formularNaVytvorenie select{
+    width: 25%;
+    font-size: 1.2rem;
+    padding: 0.75rem 1rem;
+    border: none;
+}
+
+
+.ingrediencieMoznosti {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem; 
+    padding-left: 1rem;
+}
+
+.ingredMoznosti {
+    width: 17%;
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    padding: 0.5rem;
+}
+.ingredMoznosti span{
+    margin-left: 0.5rem;
+}
+.receptyTextarea{
+    width: 90%;
+    min-height: 15rem;
+    resize: vertical;
+    padding: 0.75rem;
+    font-size: 1rem;
+    color: black;
+    font-weight: 600;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+    margin-left: 2rem;
+}
+.pridajNovyReceptNaStranke{
+    font-size: 1.5rem;
 }
