--- a/public/css/main.css
+++ b/public/css/main.css
@@ -155,7 +155,7 @@ form button:hover {
     margin: 0 auto;
     border-radius: 0.5rem;
     overflow-y: auto; /* Meníme scroll na auto */
-    max-height: 26rem; /* Obmedzíme maximálnu výšku, aby fungoval scroll */
+    max-height: 30rem; /* Obmedzíme maximálnu výšku, aby fungoval scroll */
     padding-right: 0.5rem; /* Pomôže pri scrollbar-e */
     margin-top: 1rem;
 }
@@ -204,10 +204,24 @@ form button:hover {
 
 .average-rating {
     font-size: 1.2rem;
-    padding: 0.25rem 3.25rem 0.5rem 1rem;
+    padding: 0.25rem 1.25rem 0.5rem 2rem;
     color: #555; /* Sivá farba pre text */
 }
 
+.rating-input {
+    font-size: 1.2rem;
+    padding: 0.25rem 3.25rem 0.5rem 0;
+    color: #555; /* Sivá farba pre text */
+}
+
+.rating-input:hover,
+.rating-input:hover ~ .rating-input {
+    color: gold;
+}
+
+.rating-input.selected {
+    color: gold;
+}
 
 
 /*----------------------------------Prava cast na zobrazenie Receptu----------------------------------------*/
